--- a/index.html
+++ b/index.html
@@ -30,6 +30,17 @@
 	================================================== -->
 	<link rel="shortcut icon" href="favicon.png" >
 
+	 <style>
+.widget_contact{
+
+ text-align: center;
+}
+.widget_tweets{
+
+text-align:center;
+}
+
+   </style>
 </head>
 
 <body>
