changed the name to yogesh

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="content" data-animation="animated fadeInUpBig">
-                                <h1>Hello, I'm <span>YASH</span></h1>
+                                <h1>Hello, I'm <span>Yogesh</span></h1>
                                 <h2><span class="element"></span></h2>
                                 <a class="btn btn-light effect btn-md" href="contact.html">Contact Me</a>
                             </div>
